intelowl/21-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intelowl-redis
  labels:
    app.kubernetes.io/name: intelowl-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: intelowl-redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: intelowl-redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - name: redis
              containerPort: 6379
          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 512Mi
