intelowl/31-deployment-daphne.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intelowl-daphne
  labels:
    app.kubernetes.io/name: intelowl-daphne
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: intelowl-daphne
  template:
    metadata:
      labels:
        app.kubernetes.io/name: intelowl-daphne
    spec:
      containers:
        - name: daphne
          image: intelowlproject/intelowl
          command: ["./docker/entrypoints/daphne.sh"]
          ports:
            - name: http
              containerPort: 8011
          readinessProbe:
            tcpSocket:
              port: 8011
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1Gi
          volumeMounts:
            - name: logs
              mountPath: /var/log/intel_owl
            - name: shared-files
              mountPath: /opt/deploy/files_required
      volumes:
        - name: logs
          emptyDir: {}
        - name: shared-files
          emptyDir:
            sizeLimit: 5Gi
