intelowl/15-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: intelowl
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - intelowl.white.fm
        - intelowl.internal.white.fm
      secretName: intelowl-white-fm-tls
  rules:
    - host: intelowl.white.fm
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: intelowl-web
                port:
                  number: 80
    - host: intelowl.internal.white.fm
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: intelowl-web
                port:
                  number: 80
